--- a/src/test/resources/plugin.yml
+++ b/src/test/resources/plugin.yml
@@ -1,5 +1,5 @@
 name: FunnyCommandsIntegrationPlugin
-main: net.dzikoysk.funnycommands.FunnyCommandsAcceptanceTestPlugin
+main: net.dzikoysk.funnycommands.test.FunnyCommandsAcceptanceTestPlugin
 version: 1.0.0
 author: dzikoysk
 
