--- a/pom.xml
+++ b/pom.xml
@@ -37,10 +37,11 @@
         <repository>
             <id>panda-repository</id>
             <name>Panda Repository</name>
-            <url>https://repo.panda-lang.org/releases</url>
+            <url>https://repo.panda-lang.org/</url>
         </repository>
         <repository>
             <id>spigot-repo</id>
+            <name>Spigot Repository</name>
             <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
         </repository>
     </repositories>
