Get the fuck out of here GitHub packages ฅ^•ﻌ•^ฅ

--- a/pom.xml
+++ b/pom.xml
@@ -48,9 +48,9 @@
 
     <distributionManagement>
         <repository>
-            <id>github</id>
-            <name>GitHub FunnyGuilds Apache Maven Packages</name>
-            <url>https://maven.pkg.github.com/FunnyGuilds/FunnyCommands</url>
+            <id>panda-repository</id>
+            <name>Panda Repository</name>
+            <url>https://repo.panda-lang.org/releases</url>
         </repository>
     </distributionManagement>
 
