GH-4 Improve implementation of tab complete

--- a/funnycommands-test/src/main/env/server.properties
+++ b/funnycommands-test/src/main/env/server.properties
@@ -1,5 +1,5 @@
 #Minecraft server properties
-#Mon Apr 06 19:28:18 CEST 2020
+#Tue Apr 07 02:35:21 CEST 2020
 view-distance=10
 max-build-height=256
 server-ip=
@@ -18,8 +18,10 @@ level-name=world
 motd=FunnyCommands
 announce-player-achievements=true
 force-gamemode=false
+debug=false
 hardcore=false
 white-list=false
+broadcast-console-to-ops=true
 pvp=true
 spawn-npcs=true
 generate-structures=true
@@ -30,6 +32,7 @@ network-compression-threshold=256
 level-type=DEFAULT
 spawn-monsters=true
 max-players=20
+spawn-protection=16
 online-mode=true
 allow-flight=false
 resource-pack-hash=
