GH-11 Release 0.1.5 (Resolve #11)
* Rename create() to hook() (Resolve #7)
* Support async commands (Resolve #8)
* Use javax.annotations.Nullable (Resolve #9)
* Support optional parameters (Resolve #10)

--- a/funnycommands/pom.xml
+++ b/funnycommands/pom.xml
@@ -20,7 +20,7 @@
     <parent>
         <artifactId>funnycommands-parent</artifactId>
         <groupId>net.dzikoysk</groupId>
-        <version>0.1.4</version>
+        <version>0.1.5</version>
     </parent>
 
     <artifactId>funnycommands</artifactId>
@@ -37,6 +37,11 @@
             <artifactId>spigot-api</artifactId>
             <version>1.15-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.google.code.findbugs</groupId>
+            <artifactId>jsr305</artifactId>
+            <version>3.0.2</version>
         </dependency>
 
         <!-- Tests -->
