--- a/funnycommands-test/src/main/env/server.properties
+++ b/funnycommands-test/src/main/env/server.properties
@@ -1,39 +1,39 @@
 #Minecraft server properties
-#Mon Jul 06 11:51:27 CEST 2020
-view-distance=10
-max-build-height=256
-server-ip=
-level-seed=
-allow-nether=false
-enable-command-block=false
-server-port=25565
-gamemode=0
-enable-rcon=false
-op-permission-level=4
-enable-query=false
-generator-settings=
-resource-pack=
-player-idle-timeout=0
-level-name=world
-motd=FunnyCommands
-announce-player-achievements=true
-force-gamemode=false
-debug=false
-hardcore=false
-white-list=false
-broadcast-console-to-ops=true
-pvp=true
-spawn-npcs=true
-generate-structures=true
-spawn-animals=true
-snooper-enabled=true
-difficulty=1
-network-compression-threshold=256
-level-type=DEFAULT
-spawn-monsters=true
-max-players=20
+#Sat Jan 09 02:23:05 CET 2021
 spawn-protection=16
-online-mode=true
-allow-flight=false
+generator-settings=
+force-gamemode=false
+allow-nether=false
+gamemode=0
+broadcast-console-to-ops=true
+enable-query=false
+player-idle-timeout=0
+difficulty=1
+spawn-monsters=true
+op-permission-level=4
 resource-pack-hash=
+announce-player-achievements=true
+pvp=true
+snooper-enabled=true
+level-type=DEFAULT
+hardcore=false
+enable-command-block=false
+max-players=20
+network-compression-threshold=256
 max-world-size=29999984
+server-port=25565
+debug=false
+server-ip=
+spawn-npcs=true
+allow-flight=false
+level-name=world
+view-distance=10
+resource-pack=
+spawn-animals=true
+white-list=false
+generate-structures=true
+online-mode=true
+max-build-height=256
+level-seed=
+motd=FunnyCommands
+enable-rcon=false
