--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -16,7 +16,7 @@ jobs:
     strategy:
       matrix:
         # LTS and the latest one
-        jdk: [ 8 ]
+        jdk: [ 17 ]
     steps:
     - uses: actions/checkout@v3
     - name: Set up JDK ${{ matrix.jdk }}
@@ -24,6 +24,8 @@ jobs:
       with:
         distribution: 'temurin'
         java-version: ${{ matrix.jdk }}
-        cache: 'maven'
-    - name: Build with Maven
-      run: mvn -B package --file pom.xml
+        cache: 'gradle'
+    - name: Grant execute permission for gradlew
+      run: chmod +x gradlew
+    - name: Build with Gradle
+      run: ./gradlew build
